[gd_scene load_steps=4 format=3 uid="uid://4ux0cuaq6th0"]

[ext_resource type="Script" path="res://scenes/ui/monster_info_popup.gd" id="1_lm1qn"]
[ext_resource type="FontFile" uid="uid://ohf26q7imoth" path="res://himymonsters-assets/fonts/Mitr/Mitr-SemiBold.ttf" id="2_oghed"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_re2y0"]
bg_color = Color(0, 0, 0, 0.72549)

[node name="MonsterInfoPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lm1qn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -832.0
offset_top = -420.0
offset_right = 832.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_re2y0")

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 968.0
offset_top = 136.0
offset_right = 1008.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_oghed")
theme_override_font_sizes/font_size = 30
text = "ชื่อ"

[node name="Name" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1288.0
offset_top = 136.0
offset_right = 1401.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_oghed")
theme_override_font_sizes/font_size = 30

[node name="KillLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 968.0
offset_top = 200.0
offset_right = 1241.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("2_oghed")
theme_override_font_sizes/font_size = 30
text = "โอกาสรอดเมื่อโดนฆ่า"

[node name="KillRateSuccess" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1288.0
offset_top = 200.0
offset_right = 1371.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("2_oghed")
theme_override_font_sizes/font_size = 30

[node name="StealLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 968.0
offset_top = 264.0
offset_right = 1241.0
offset_bottom = 312.0
theme_override_fonts/font = ExtResource("2_oghed")
theme_override_font_sizes/font_size = 30
text = "โอกาสรอดเมื่อโดนขโมย"

[node name="StealRateSuccess" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1288.0
offset_top = 264.0
offset_right = 1371.0
offset_bottom = 312.0
theme_override_fonts/font = ExtResource("2_oghed")
theme_override_font_sizes/font_size = 30

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
